# python_advanced

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt  schemas.py  test_reqres.py
.github/workflows/: release.yml  test.yml  tests.yml
allure-report/: index.html
allure-report/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: history.json
allure-report/widgets/: duration.json  severity.json  summary.json
app/: exceptions.py  main.py  models.py
app/database/: engine.py  resources.py  seed.py  users.py
app/routes/: auth.py  resources.py  system.py  ui.py  users.py
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 105b213e72639201.json  10676ac496535c73.txt  106e2d246e938ffb.txt  107b02de01ffab0e.txt  107cdeb75981641c.json  1089bb43bd8638c7.json  1097c60e88191af5.txt  1098b6018487383c.json  1098ef9b74602d5f.txt  10a1538601d14afb.txt  10a3b1b4cd5fd4a4.txt  10aebb35f4e7243c.txt  10c661fbb3cf1213.txt  10dc69d9e1f534a2.json  10e0c8c89165db5.json  10e53d38fbaca663.txt  10f0e638e8121d21.json  11019e417ae1e4d8.txt  11085584b8d73c50.json  1108c0c6653db3aa.json  110b958491fdb70b.json  (+4169 more)
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
tests/: api_client.py  assertions.py  conftest.py  schemas.py  test_api_schemas.py  test_auth.py  test_crud.py  test_crud_resources.py  test_crud_users.py  test_demo_statuses.py  test_reqres.py  test_resources.py  test_smoke.py  test_special.py  test_users.py  test_validation.py
widgets/: behaviors.json  categories-trend.json  duration-trend.json  duration.json  environment.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+4467 files in other folders)
